# allegro_auth

./: .gitignore  LICENCE  README.md  client.py  config.py  main.py  pyproject.toml  requirements.txt  schema.py  token_manager.py
.github/workflows/: tests.yml
allegro_auth/: __init__.py  client.py  config.py  token_manager.py
src/allegro_auth/: __init__.py  client.py
tests/: test_client.py  test_token_manager.py
