[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "allegro_auth"
version = "0.0.1"
authors = [
  { name="Serhii Dolhopolov", email="veritas.dol@gmail.com" },
]
description = "This Python package handles authentication with the Allegro API using OAuth2."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/veritasdol/allegro_auth"
Issues = "https://github.com/veritasdol/allegro_auth/issues"